--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,37 @@
-/* Created by: Mr. Coxall
-* Created on: Sep 2020
+/* Created by: Julianne Leblanc-Peltier
+* Created on: April 2024
 * This file contains the CSS for index.html
 */
+
+body {
+  background-color: rgb(255, 238, 192);
+}
+
+.innerbody {
+  background-color: rgb(250 250 250);
+  width: 500px;
+  padding: 10px;
+  border: 5px solid rgb(208, 40, 2);
+  margin: 20px auto;
+}
+
+.test {
+  background-color: rgb(0 0 0);
+  width: 40px;
+}
+
+.content {
+  padding: 1%;
+}
+
+.column {
+  float: left;
+  width: 50%;
+}
+
+/* Clear floats after the columns */
+.row::after {
+  content: "";
+  display: table;
+  clear: both;
+}
